Update Resume Summarizer Agent RAG +LLaMa + Transformers.ipynb

--- a/Resume Summarizer Agent RAG +LLaMa + Transformers.ipynb
+++ b/Resume Summarizer Agent RAG +LLaMa + Transformers.ipynb
@@ -14,7 +14,7 @@
    },
    "source": [
     "#### Resume Summarization AI Agent (RAG + LLM)\n",
-    "An end-to-end AI pipeline that leverages Retrieval-Augmented Generation (RAG) and Large Language Models (LLMs) on Databricks to automatically generate professional summaries of resumes.\n",
+    "An end-to-end AI pipeline that leverages Retrieval-Augmented Generation (RAG) and Large Language Models (LLMs) on Databricks to generate professional summaries of resumes.\n",
     "\n",
     "#### Technologies Used:\n",
     " - Sentence Transformers for semantic similarity and intelligent chunk retrieval\n",
