Update Resume Summarizer Agent RAG +LLaMa + Transformers.ipynb

--- a/Resume Summarizer Agent RAG +LLaMa + Transformers.ipynb
+++ b/Resume Summarizer Agent RAG +LLaMa + Transformers.ipynb
@@ -26,7 +26,7 @@
     " - Apache Spark + Unity Catalog for distributed access to resume data\n",
     "\n",
     "#### Problem Statement:\n",
-    "Recruiters and hiring managers often face the challenge of reviewing hundreds of resumes manually — a process that is both time-consuming and error-prone.\n",
+    "Recruiters and hiring managers often face the challenge of reviewing hundreds of resumes manually — a process that is both time-consuming and tedious.\n",
     "\n",
     "#### Project Goal:\n",
     "To streamline the recruitment process by generating concise and professional resume summaries using an LLM. The pipeline enhances accuracy and relevance by retrieving only the most semantically important content before passing it to the model. \n"
