Update Resume Summarizer Agent RAG +LLaMa + Transformers.ipynb

--- a/Resume Summarizer Agent RAG +LLaMa + Transformers.ipynb
+++ b/Resume Summarizer Agent RAG +LLaMa + Transformers.ipynb
@@ -23,7 +23,7 @@
     "\n",
     " - Prompt Engineering to guide the model for clear, high-quality responses\n",
     "\n",
-    " - Apache Spark + Unity Catalog for distributed access to resume data\n",
+    " - Unity Catalog for distributed access to resume data\n",
     "\n",
     "#### Problem Statement:\n",
     "Recruiters and hiring managers often face the challenge of reviewing hundreds of resumes manually — a process that is both time-consuming and tedious.\n",
